--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="script.js">
-    <title>Document</title>
+    <title>Zakazivanje padela-Padel centar</title>
+    <meta name="description" content="zakazivanje padela, sta je padel,igranje padela">
+    <meta name="keywords" content="padel,padel novi sad,padel srbija,padel centar">
 </head>
 <body>
     <div class="navigacioni-meni"><ul class="navigacija">
@@ -16,7 +18,7 @@
 </div>
 <div class="kartica">
     
-    <div class="reket"><img src="slike/padel.jpg">
+    <div class="reket"><img src="slike/padel.jpg" alt="sta je padel">
     </div>
     <div class="padel">
             <h2>Šta je padel</h2>
