--- a/zakazivanje.html
+++ b/zakazivanje.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
+    <title>Zakazivanje padela-Padel centar</title>
+    <meta name="description" content="zakazivanje padela, sta je padel,igranje padela">
+    <meta name="keywords" content="padel,padel novi sad,padel srbija,padel centar">
 </head>
 <body>
     
