--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="script.js">
+    <link rel="icon" href="slike/favicon.ico">
     <title>Zakazivanje padela-Padel centar</title>
     <meta name="description" content="zakazivanje padela, sta je padel,igranje padela">
     <meta name="keywords" content="padel,padel novi sad,padel srbija,padel centar">
