--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v21.0"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="script.js"></script>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="script.js">
-    <link rel="icon" href="slike/favicon.ico">
+    <link rel="icon" href="fav/favicon.ico">
     <title>Zakazivanje padela-Padel centar</title>
     <meta name="description" content="zakazivanje padela, sta je padel,igranje padela">
     <meta name="keywords" content="padel,padel novi sad,padel srbija,padel centar">
 </head>
 <body>
     <div class="navigacioni-meni"><ul class="navigacija">
-        <img src="slike/logo.png" id="logo">
+        <img src="slike/logo.png" id="logo" alt="padel-central">
         <li class="link"><a href="index.html" >O nama</a></li>
         <li class="link"><a href="zakazivanje.html">Zakazivanje</a></li>
     </ul>
 </div>
+<div class="fb-like" data-href="https://teofanov03.github.io/porjekatvb/" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
 <div class="kartica">
+
     
     <div class="reket"><img src="slike/padel.jpg" alt="sta je padel">
     </div>
@@ -34,11 +39,13 @@
 </div>
 
 <footer>
-     <a href="" ><img src="slike/facebook.png" alt="" class="slike-footer"></a>
-        <a href=""><img src="slike/instagram.png" alt="" class="slike-footer"></a>
-        <a href=""><img src="slike/tiktok.png" alt=""class="slike-footer" ></a>
+     <a href="" ><img src="slike/facebook.png" alt="facebook.profil" class="slike-footer"></a>
+        <a href=""><img src="slike/instagram.png" alt="instagram.profil" class="slike-footer"></a>
+        <a href=""><img src="slike/tiktok.png" alt="tiktok.profil" class="slike-footer" ></a>
    
 </footer>
 
 </body>
 </html>
+  
+
