--- a/zakazivanje.html
+++ b/zakazivanje.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="script.js"></script>
+    <link rel="icon" href="fav/favicon-16x16.png">
     <link rel="stylesheet" href="style/style.css">
+    
     <title>Zakazivanje padela-Padel centar</title>
     <meta name="description" content="zakazivanje padela, sta je padel,igranje padela">
     <meta name="keywords" content="padel,padel novi sad,padel srbija,padel centar">
@@ -12,14 +14,16 @@
 <body>
     
     <div class="navigacioni-meni"><ul class="navigacija">
-        <img src="slike/logo.png" id="logo">
+        <img src="slike/logo.png" id="logo" alt="padel-central">
         <li class="link"><a href="index.html" >O nama</a></li>
         <li class="link"><a href="zakazivanje.html">Zakazivanje</a></li>
     </ul>
 </div>
+    </div>
+    </div>
 <p id="text-iznad-forme">Zakaži kod nas pomocu ove forme i mi cemo u sto bržem roku odgovoriti da li smo slobodni u terminu kojem vi želite</p>
 <div class="forma">
-    <form action="">
+    <form action="post">
         <div class="polja"><p>Ime i prezime</p>
             <input type="text" ></div>
         <div class="polja"><p>Broj telefona</p>
@@ -27,7 +31,7 @@
         <div class="polja"><p>Email</p>
             <input type="email" ></div>
         <div class="polja"><p>Datum</p>
-            <input type="date" ></div>
+            <input type="p" ></div>
         <div class="polja"><p>Vreme</p>
             <input type="time" ></div>
       <div class=""> <input type="submit" class="prijava" value="Zakaži"></div>
@@ -36,9 +40,9 @@
 </div>
 
 <footer>
-    <a href="" ><img src="slike/facebook.png" alt="" class="slike-footer"></a>
-       <a href=""><img src="slike/instagram.png" alt="" class="slike-footer"></a>
-       <a href=""><img src="slike/tiktok.png" alt=""class="slike-footer" ></a>
+    <a href="" ><img src="slike/facebook.png" alt="facebook.profil" class="slike-footer"></a>
+       <a href=""><img src="slike/instagram.png" alt="instagram.profil" class="slike-footer"></a>
+       <a href=""><img src="slike/tiktok.png" alt="tiktok.profil" class="slike-footer" ></a>
   
 </footer>
 </body>
